# xdiff

./: Cargo.toml
examples/: config.rs  inline.rs  similar.rs
fixtures/: text.yml
src/: cli.rs  config.rs  lib.rs
