[package]
name = "xdiff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.29", features = ["derive"] }
console = "0.15.2"
http-serde = "1.1.2"
reqwest = { version = "0.11.13", default-features = false, features = ["rustls"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.16"
similar = { version = "2.2.1", features = ["inline", "bytes", "serde"] }
tokio = { version = "1.23.0", features = ["full"] }
url = { version = "2.3.1", features = ["serde"] }
